refactor: Change main file

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
       name="description"
       content="Цифровая кафедра: Frontend-разработка"
     />
-    <title>Frontend-development</title>
+    <title>Frontend-разработка</title>
   </head>
   <body>
-    <h1>Welcom the my Rep.!</div>
+    <h1>Добро пожаловать на мой репозиторий!</h1>
+    <p>Это параграф.</p>
   </body>
 </html>
