feat: Add events page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="styles/styles.css?ver=0">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/variables.css">
     <link rel="stylesheet" href="styles/typography.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
         <img class="header__logo-img" src="static/images/logo.svg" alt="logo" />
       </a>
       <nav class="header__nav">
-        <a href="#" class="link header__nav-link">Мероприятия</a>
+        <a href="events.html" class="link header__nav-link">Мероприятия</a>
         <a href="#" class="link header__nav-link">Блог</a>
         <a href="#" class="link header__nav-link">О нас</a>
         <a href="#" class="link header__nav-link">Контакты</a>
