fix: Load images

--- a/events.html
+++ b/events.html
@@ -36,7 +36,7 @@
         </header>
         <section class="events__articles">
             <article class="article">
-                <img class="article-image" src="/static/images/nirvana.png" alt="nirvana" />
+                <img class="article-image" src="static/images/nirvana.png" alt="nirvana" />
                 <div class="article__info">
                     <h3 class="subtitle article-subtitle">Собираемся и слушаем альбом Nirvana. Nirvana</h3>
                     <p class="text">Один из самых популярных подкастов в мире. 
@@ -45,7 +45,7 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-image" src="/static/images/howStuffWorks.png" alt="howStuffWorks" />
+                <img class="article-image" src="static/images/howStuffWorks.png" alt="howStuffWorks" />
                 <div class="article__info">
                     <h3 class="subtitle article-subtitle">Есть тема, нужно обсудить с HowStuffWorks</h3>
                     <p class="text">Это третий альбом группы, выпущенный после смерти 
@@ -55,7 +55,7 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-image" src="/static/images/sade.png" alt="sade" />
+                <img class="article-image" src="static/images/sade.png" alt="sade" />
                 <div class="article__info">
                     <h3 class="subtitle article-subtitle">Вечер | The Best of Sade</h3>
                     <p class="text">Музыка группы имеет эклектичный характер, 
@@ -65,7 +65,7 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-image" src="/static/images/malevich.png" alt="malevich" />
+                <img class="article-image" src="static/images/malevich.png" alt="malevich" />
                 <div class="article__info">
                     <h3 class="subtitle article-subtitle">Выставка Малевича в Томске</h3>
                     <p class="text">Это будет самая полная выставка с 1988 года, 
@@ -75,7 +75,7 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-image" src="/static/images/tatler.png" alt="tatler" />
+                <img class="article-image" src="static/images/tatler.png" alt="tatler" />
                 <div class="article__info">
                     <h3 class="subtitle article-subtitle">Мастер — класс по студийной съемке от Tatler</h3>
                     <p class="text">Фотографы издания расскажут, как им удается 
@@ -84,7 +84,7 @@
                 </div>
             </article>
             <article class="article">
-                <img class="article-image" src="/static/images/hatters.png" alt="hatters" />
+                <img class="article-image" src="static/images/hatters.png" alt="hatters" />
                 <div class="article__info">
                     <h3 class="subtitle article-subtitle">Повесилимся на славу на концерте The Hatters</h3>
                     <p class="text">Российская джипси-фолк-рок группа, основанная в 2016 
@@ -96,7 +96,7 @@
         </section>
         <div class="article__drop-down">
             <span>Показать еще</span>
-            <img src="/static/images/showDown.svg" alt="showDown" />
+            <img src="static/images/showDown.svg" alt="showDown" />
         </div>
         <section class="additional-services">
             <header class="additional-services__header">
