feat: Add some updates from design

--- a/event.html
+++ b/event.html
@@ -424,6 +424,29 @@
           </label>
         </form>
       </div>
+      <div class="page-footer__about">
+        <div class="page-footer__pp">
+          <p>© Millennials 2022</p>
+          <div class="page-footer__pp-actions">
+            <h4>Политика конфиденциальности</h4>
+            <h4>Cookies</h4>
+          </div>
+        </div>
+        <div class="page-footer__contacts">
+          <svg class="link__icon" width="58" height="58">
+            <use xlink:href="assets/icons/symbols.svg#insta"></use>
+          </svg>
+          <svg class="link__icon" width="58" height="58">
+            <use xlink:href="assets/icons/symbols.svg#vk"></use>
+          </svg>
+        </div>
+        <div class="page-footer__description">
+          <p>Создание и продвижение</p>
+          <svg class="link__icon" width="56" height="17">
+            <use xlink:href="assets/icons/symbols.svg#tagree"></use>
+          </svg>
+        </div>
+      </div>
     </div>
   </footer>
 </body>
