--- a/event.html
+++ b/event.html
@@ -5,31 +5,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scaleble=no">
 
-  <title> Lenni Art</title>
+  <title>Lenni Art</title>
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="styles/styles.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script src="http://maps.google.com/maps/api/js?key=AIzaSyBG5bu8ecTgePJ1AJe-m0-IJVUJ-UCDXIs" type="text/javascript"></script>
   <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="body">
   <header class="page-header">
-    <div class="page-header_container">
-      <a href="index.html" class="page-header__logo">
-        <svg class="page-header_logo-img" width="202" height="147">
+    <div class="page-header__container">
+      <a href="#" class="page-header__logo">
+        <svg class="page-header__logo-icon" width="202" height="147" viewBox="0 0 202 147">
           <use xlink:href="assets/icons/symbols.svg#logo"></use>
         </svg>
       </a>
       <nav class="page-header__nav">
-        <a href="events.html" class="page-header__nav-link">Мероприятия</a>
+        <a href="#" class="page-header__nav-link">Мероприятия</a>
         <a href="#" class="page-header__nav-link">Блог</a>
         <a href="#" class="page-header__nav-link">О нас</a>
         <a href="#" class="page-header__nav-link">Контакты</a>
+
+        <div class="page-header__nav-user">
+          <a href="#" class="page-header__nav-user-link">
+            Александр С.
+          </a>
+
+          <a href="#" class="page-header__nav-logout">
+            <svg class="page-header__nav-logout-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="assets/icons/symbols.svg#door"></use>
+            </svg>
+          </a>
+        </div>
       </nav>
-      <a href="#" class="btn page-header__buttonuser">Войти</a>
+      <div class="page-header__right-block">
+        <a href="#" class="page-header__user-btn">
+          Войти
+          <svg class="page-header__user-icon" width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="assets/icons/symbols.svg#userCheck"></use>
+          </svg>
+        </a>
+        <button type="button" class="page-header__nav-toggle" id="js-navToggle"></button>
+      </div>
     </div>
   </header>
+
   <main class="main">
     <div class="breadcrumbs">
       <a href="#" class="breadcrumbs__link">Главная</a>
