feat: Add the remaining adaptive, layout and redirects

--- a/event.html
+++ b/event.html
@@ -17,16 +17,16 @@
 <body class="body">
   <header class="page-header">
     <div class="page-header__container">
-      <a href="#" class="page-header__logo">
+      <a href="index.html" class="page-header__logo">
         <svg class="page-header__logo-icon" width="202" height="147" viewBox="0 0 202 147">
           <use xlink:href="assets/icons/symbols.svg#logo"></use>
         </svg>
       </a>
       <nav class="page-header__nav">
-        <a href="#" class="page-header__nav-link">Мероприятия</a>
-        <a href="#" class="page-header__nav-link">Блог</a>
-        <a href="#" class="page-header__nav-link">О нас</a>
-        <a href="#" class="page-header__nav-link">Контакты</a>
+        <a href="events.html" class="page-header__nav-link">Мероприятия</a>
+        <a href="index.html#blog" class="page-header__nav-link">Блог</a>
+        <a href="index.html#about" class="page-header__nav-link">О нас</a>
+        <a href="index.html#contacts" class="page-header__nav-link">Контакты</a>
 
         <div class="page-header__nav-user">
           <a href="#" class="page-header__nav-user-link">
@@ -54,9 +54,9 @@
 
   <main class="main">
     <div class="breadcrumbs">
-      <a href="#" class="breadcrumbs__link">Главная</a>
-      <a href="#" class="breadcrumbs__link">Раздел</a>
-      <a href="#" class="breadcrumbs__link">Страница раздела</a>
+      <a href="index.html" class="breadcrumbs__link">Главная</a>
+      <a href="events.html" class="breadcrumbs__link">Мероприятия</a>
+      <a href="#" class="breadcrumbs__link">Вечер | The Best of Sade</a>
     </div>
     <article class="event">
       <header class="event__header">
@@ -425,11 +425,11 @@
       <div class="page-footer__border"></div>
       <div class="page-footer__wrapper">
         <nav class="page-footer__nav">
-          <a class="page-footer__nav-link">Календарь мероприятий</a>
-          <a class="page-footer__nav-link">Провести мероприятие</a>
-          <a class="page-footer__nav-link">Стать арендатором</a>
-          <a class="page-footer__nav-link">Наши проекты</a>
-          <a class="page-footer__nav-link">Контакты</a>
+          <a class="page-footer__nav-link" href="events.html">Календарь мероприятий</a>
+          <a class="page-footer__nav-link" href="index.html">Провести мероприятие</a>
+          <a class="page-footer__nav-link" href="index.html">Стать арендатором</a>
+          <a class="page-footer__nav-link" href="index.html#about">Наши проекты</a>
+          <a class="page-footer__nav-link" href="index.html#contacts">Контакты</a>
         </nav>
         <form class="page-footer__form subscribe" action="https://jsonplaceholder.typicode.com/posts" method="post" id="js-subscribeForm">
           <h4 class="subscribe__title">Подпишись и будь в курсе происходящего</h4>
@@ -448,15 +448,25 @@
           </label>
         </form>
       </div>
+
+      <div class="page-footer__contacts hidden1340more">
+        <svg class="link__icon" width="58" height="58">
+          <use xlink:href="assets/icons/symbols.svg#insta"></use>
+        </svg>
+        <svg class="link__icon" width="58" height="58">
+          <use xlink:href="assets/icons/symbols.svg#vk"></use>
+        </svg>
+      </div>
+
       <div class="page-footer__about">
         <div class="page-footer__pp page-footer__down-block">
-          <p>© Millennials 2022</p>
+          <p class="page-footer__pp-copyright page-footer__text">© Millennials 2022</p>
           <div class="page-footer__pp-actions">
-            <h4>Политика конфиденциальности</h4>
-            <h4>Cookies</h4>
+            <h4 class="page-footer__pp-actions_title page-footer__text">Политика конфиденциальности</h4>
+            <h4 class="page-footer__pp-actions_title page-footer__text">Cookies</h4>
           </div>
         </div>
-        <div class="page-footer__contacts page-footer__down-block">
+        <div class="page-footer__contacts page-footer__down-block hidden768">
           <svg class="link__icon" width="58" height="58">
             <use xlink:href="assets/icons/symbols.svg#insta"></use>
           </svg>
@@ -465,7 +475,7 @@
           </svg>
         </div>
         <div class="page-footer__description page-footer__down-block">
-          <p>Создание и продвижение</p>
+          <p class="page-footer__text">Создание и продвижение</p>
           <svg class="link__icon" width="56" height="17">
             <use xlink:href="assets/icons/symbols.svg#tagree"></use>
           </svg>
@@ -473,6 +483,18 @@
       </div>
     </div>
   </footer>
+
+  <script src="scripts/jquery-3.6.0.min.js"></script>
+
+  <script src="scripts/jquery.validate.min.js"></script>
+  <script src="scripts/jquery.validate-init.js"></script>
+
+  <script src="scripts/jquery.selectric.min.js"></script>
+  <script src="scripts/jquery.mask.min.js"></script>
+  <script src="scripts/datepicker.min.js"></script>
+
+  <script src="scripts/swiper.min.js"></script>
+  <script src="scripts/main.min.js"></script>
 </body>
 
 </html>
