refactor: Change url upcoming && Change http to https for googlemap

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               </button>
             </footer>
           </div>
-          <a href="#" class="upcoming__link link">Смотреть все</a>
+          <a href="events.html" class="upcoming__link link">Смотреть все</a>
         </div>
       </section>
       <section class="listing home__listing" id="blog">
@@ -471,7 +471,7 @@
   </div>
 
   <script src="scripts/jquery-3.6.0.min.js"></script>
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyBG5bu8ecTgePJ1AJe-m0-IJVUJ-UCDXIs" type="text/javascript"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyBG5bu8ecTgePJ1AJe-m0-IJVUJ-UCDXIs" type="text/javascript"></script>
 
   <script src="scripts/jquery.validate.min.js"></script>
   <script src="scripts/jquery.validate-init.js"></script>
